# bedrock

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.claude/: settings.json
.claude/hooks/: ensure-skill-data.sh
.claude/skills/determ-analysis/: SKILL.md
.github/: runs-on.yml
.github/workflows/: nix.yml
contrib/: README.md  gen_pebs_margin.rs  setup-skills.sh
crates/bedrock/: Makefile  bedrock_main.rs  instruction_counter.rs
crates/bedrock-assertions/: Cargo.toml
crates/bedrock-assertions/src/: assertion.rs  condition.rs  lib.rs  macros.rs
crates/bedrock-cli/src/: args.rs  main.rs
crates/bedrock-lab/: Cargo.toml
crates/bedrock-lab/examples/: lab_branching.rs
crates/bedrock-lab/src/: bash.rs  branch.rs  checkpoint.rs  error.rs  event.rs  inner.rs  lib.rs  rng.rs  rng_tests.rs  time.rs  tree.rs
crates/bedrock-vm/: Cargo.toml
crates/bedrock-vm/src/: builder.rs  console.rs  events.rs  events_tests.rs  file_store.rs  file_xfer.rs  io_channel.rs  lib.rs  logging.rs  logging_tests.rs  rdrand.rs
crates/bedrock-vm/src/boot/: constants.rs  elf.rs  linux.rs  mod.rs
crates/bedrock-vm/src/vm/: exit.rs  ioctl.rs  mod.rs  stats.rs
crates/bedrock-vmx/: build.rs
crates/bedrock-vmx/src/: compat.rs  hypercalls.rs  lib.rs  mod.rs  prelude.rs  tests.rs  vm_state.rs  vm_state_event_tests.rs
crates/bedrock-vmx/src/devices/: mod.rs  random.rs  random_tests.rs  rdrand.rs  rdrand_tests.rs  serial.rs
crates/bedrock-vmx/src/events/: types.rs
crates/bedrock-vmx/src/exits/: helpers.rs  io.rs  mod.rs  pebs.rs  rdrand.rs  rdrand_tests.rs  reasons.rs  time.rs  time_tests.rs  vmcall.rs
crates/bedrock-vmx/src/logging/: entry.rs
crates/bedrock-vmx/src/traits/: context.rs  device_state.rs  errors.rs  instruction_counter.rs  instruction_counter_tests.rs  vm_run.rs
crates/bedrock-vmx/src/vm/: forked.rs
crates/bedrock/vm_file/: forked.rs  handlers.rs  root.rs  structs.rs
guest/: file-fetch.c  file-store.c  init  libvmcall.h  pebs-register.c
guest/bedrock-console/: bedrock-console.c
guest/bedrock-io/: bedrock-io.c
guest/patches/: 0004-random-source-urandom-getrandom-from-vmcall.patch
guest/scx-fuzz/: scx-init.c  thread-fuzz.c
guest/scx-fuzz/bpf/: intf.h  main.bpf.c
guest/workload-monitor/: Cargo.toml
guest/workload-monitor/src/: main.rs
nix/: README.md  guest-kernel.nix  podman-initrd.nix  tests.nix
scripts/initrd-podman/bedrock-io/: bedrock-io.c
tests/: Cargo.toml
tests/integration/: bash_io.rs  boot.rs  common.rs  determinism.rs  feedback.rs  file_store.rs  file_xfer.rs  main.rs  rng.rs  workload_monitor.rs
workloads/bitcoin/: .gitignore  build.sh  compose.yaml
workloads/bitcoin/miner/: Dockerfile  miner.c
workloads/bitcoin/miner/drivers/: dummy
workloads/bitcoin/shutdown/: Dockerfile  shutdown.c
workloads/concurrency-fuzz/: .gitignore  build.sh  compose.yaml
workloads/concurrency-fuzz/fuzz/: Dockerfile  queue.c  run.sh  vmcall.c
workloads/integration-tests/: build.sh  compose.yaml
workloads/integration-tests/ready/: Dockerfile  ready.c  test_feedback_buffer_counter.c  test_feedback_buffers.c
