[package]
name = "bedrock-lab"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level testing and debugging API for the bedrock hypervisor"

[dependencies]
bedrock-vm = { path = "../bedrock-vm" }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
